--- a/force-app/main/default/classes/GGW_ExportCtrlTest.cls
+++ b/force-app/main/default/classes/GGW_ExportCtrlTest.cls
@@ -12,13 +12,36 @@
 public class GGW_ExportCtrlTest {
     @TestSetup
     static void makeData(){
-        // Create test sections
-        // Samlple content data for testing methods
-        GGW_TestDataFactory.createGrantContentTestData();
+
+        String uniqueUserName = 'grantuser' + DateTime.now().getTime() + '@labsorg.com';
+        // This code runs as the system user
+        Profile p = [SELECT Id FROM Profile WHERE Name='Standard User'];
+
+        PermissionSet ps = [SELECT Id FROM PermissionSet WHERE Name = 'GGW_User_Permissions'];
+        
+        User u = new User(Alias = 'standt', Email='grantuser@labsorg.com',
+                        EmailEncodingKey='UTF-8', LastName='Testing', LanguageLocaleKey='en_US',
+                        LocaleSidKey='en_US', ProfileId = p.Id,
+                        TimeZoneSidKey='America/Los_Angeles',
+                        UserName=uniqueUserName);   
+        insert u;
+
+        insert new PermissionSetAssignment(AssigneeId = u.id, PermissionSetId = ps.Id);                 
     }
 
     @isTest
     static void testExportCtrl(){
+
+        // This code runs as the Grant Guide User with GGW Permission Set from the TestSetup makeData() method.
+        User u = [SELECT Alias, Email, EmailEncodingKey, LastName, LanguageLocaleKey,
+                    LocaleSidKey, ProfileId, TimeZoneSidKey, UserName 
+                    FROM User WHERE Email = 'grantuser@labsorg.com' AND Alias='standt' LIMIT 1];
+        
+        System.runAs(u) {
+        
+        //Create sample data
+        GGW_TestDataFactory.createGrantContentTestData();
+ 
         // Unit test for conroller extention when used as part of record page context
         // Query all suggested sections
         List<GGW_SectionWrapper> lst = GGW_ApplicationCtrl.getSections();
@@ -41,10 +64,22 @@ public class GGW_ExportCtrlTest {
         System.assertEquals(app.Name, grantExportController.appName, 'Grant name selected for export does not exist - MyTest Grant');
         // 3 section expected to be added to grand
         System.assertEquals(3, grantExportController.items.size(), 'Grant expected 3 items for export, size did not match test.');
-    }
+            }
+        }
 
     @isTest
     static void testExportWithPage(){
+
+        // This code runs as the Grant Guide User with GGW Permission Set from the TestSetup makeData() method.
+        User u = [SELECT Alias, Email, EmailEncodingKey, LastName, LanguageLocaleKey,
+                    LocaleSidKey, ProfileId, TimeZoneSidKey, UserName 
+                    FROM User WHERE Email = 'grantuser@labsorg.com' AND Alias='standt' LIMIT 1];
+        
+        System.runAs(u) {
+        
+        //Create sample data
+        GGW_TestDataFactory.createGrantContentTestData();
+ 
         // Unit test for conroller extention when NOT Record page but pass parameter recordId
         // Query all suggested sections
         List<GGW_SectionWrapper> lst = GGW_ApplicationCtrl.getSections();
@@ -70,5 +105,6 @@ public class GGW_ExportCtrlTest {
 
         System.assertEquals(null, grantExportController.recordId, 'Negative test with empty Grant for export expected null value'); 
         System.assertEquals('This view requires a Grant record, missing.', grantExportController.appName, 'Negative test empty Grant expect missing name error message');
+            }
     }
 }
