--- a/force-app/main/default/classes/GGW_SampleDataTest.cls
+++ b/force-app/main/default/classes/GGW_SampleDataTest.cls
@@ -10,9 +10,32 @@
  */
 @IsTest
 public class GGW_SampleDataTest {
+    @TestSetup
+    static void makeData(){
 
+        String uniqueUserName = 'grantuser' + DateTime.now().getTime() + '@labsorg.com';
+        // This code runs as the system user
+        Profile p = [SELECT Id FROM Profile WHERE Name='Standard User'];
+
+        PermissionSet ps = [SELECT Id FROM PermissionSet WHERE Name = 'GGW_User_Permissions'];
+        
+        User u = new User(Alias = 'standt', Email='grantuser@labsorg.com',
+                        EmailEncodingKey='UTF-8', LastName='Testing', LanguageLocaleKey='en_US',
+                        LocaleSidKey='en_US', ProfileId = p.Id,
+                        TimeZoneSidKey='America/Los_Angeles',
+                        UserName=uniqueUserName);   
+        insert u;
+
+        insert new PermissionSetAssignment(AssigneeId = u.id, PermissionSetId = ps.Id);                 
+    }
     @isTest
     static void testInsertSampleSections(){
+        // This code runs as the Grant Guide User with GGW Permission Set from the TestSetup makeData() method.
+        User u = [SELECT Alias, Email, EmailEncodingKey, LastName, LanguageLocaleKey,
+                    LocaleSidKey, ProfileId, TimeZoneSidKey, UserName 
+                    FROM User WHERE Email = 'grantuser@labsorg.com' AND Alias='standt' LIMIT 1];
+        
+        System.runAs(u) {
         // POSITIVE Test validation
         // Call this method to insert Sections & Content Block sample data
         Test.startTest();
@@ -25,10 +48,17 @@ public class GGW_SampleDataTest {
         System.assertEquals(10, lstSection.size(), 'Sections list is expected to have records');
         List<GGW_Content_Block__c> lstContentBlock = [SELECT Id, Name FROM GGW_Content_Block__c WITH SECURITY_ENFORCED];
         System.assertEquals(13, lstContentBlock.size(), 'Block list is expected to have records');
+        }
     }
 
     @isTest
     static void testInsertSampleSectionsWithExisting(){
+        // This code runs as the Grant Guide User with GGW Permission Set from the TestSetup makeData() method.
+        User u = [SELECT Alias, Email, EmailEncodingKey, LastName, LanguageLocaleKey,
+                    LocaleSidKey, ProfileId, TimeZoneSidKey, UserName 
+                    FROM User WHERE Email = 'grantuser@labsorg.com' AND Alias='standt' LIMIT 1];
+        
+        System.runAs(u) {
         // NEGATIVE Fail test validation
         // Create sample sections before test
         GGW_Section__c gs = new GGW_Section__c();
@@ -46,6 +76,6 @@ public class GGW_SampleDataTest {
         Test.stopTest();
         System.assertNotEquals(null, str, 'Result string should not be null');
         System.assertEquals('Section data already exists. IMPORT CANCELLED', str, 'Result string is expected as IMPORT CANCELED message');
-
+        }
     }
 }
